--- a/packages/proto/public/leaderboard.html
+++ b/packages/proto/public/leaderboard.html
@@ -4,6 +4,7 @@
     <!-- Put style and other stuff here -->
   </head>
   <body>
-    <h1>I like my cheese drippy bruh</h1>
+    <h1>Leaderboard</h1>
+    <h2>This is an entry in leaderboard.</h2>
   </body>
 </html>
