--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Put style and other stuff here -->
+    <!-- Style for whole document -->
+    <style>
+        body {
+            background-color: beige;
+            font-family:'Times New Roman', Times, serif;
+        }
+        .inner-box {
+            background-color: #d1bfa3;   
+            padding: 20px;          
+            margin: 20px auto;       
+            width: 90%;                
+        }
+        h1 {
+          color: navy;
+          padding: 10px;
+          text-align: center;
+          font-size: 50px;
+          border: 5px solid black;
+          margin: 0 auto;
+          width: 550px;
+          
+        }
+        h2, h2 a{
+            color: darkslategrey;
+            text-decoration: underline;
+        }
+        li a {
+            color: black;
+            font-style: italic;
+        }
+      </style>
   </head>
   <body>
-    <h1>Funny Puzzle Hunt :P</h1>
+    <div class="inner-box">
     <h2> <a href="leaderboard.html">Leaderboard </a></h2>
+    <h1>Funny Puzzle Hunt :P</h1>
         <h2>Level 1 Puzzles</h2>
         <ol>
             <li><a href="level-1/colors.html">Colors</a></li>
-            <li><a href="level-1/the-numbers-that-are-in-the-lost-tv-show-you-index-by.html">THE NUMBERS THAT ARE IN THE LOST TV SHOW YOU INDEX BY</a></li>
+            <li><a href="level-1/answer-yoohoo.html">Just Look Up</a></li>
             <li><a href="level-1/aplusbequalsc.html">A+B=C</a></li>
             <li><a href="level-1/time.html">Time</a></li>
             <li><a href="level-1/1-3-puzzle.html">1/3 Puzzle</a></li>
@@ -17,7 +48,7 @@
         <h2>Level 2 Puzzles</h2>
         <ol>
             <li><a href= "level-2/not-without-precedent.html">Not Without Precedent</a></li>
-            <li><a href="level-2/lunchables-gatorade.html">Lunchables Gatorade</a></li>
+            <li><a href="level-2/lunchable-gatorade.html">Lunchables Gatorade</a></li>
             <li><a href="level-2/nyc-subway.html">NYC Subway</a></li>
             <li><a href="level-2/blank-squares.html">Blank Squares</a></li>
             <li><a href="level-2/2-3-puzzle.html">2/3 Puzzle</a></li>
@@ -38,5 +69,6 @@
                 <li><a href="level-4/all-the-moves.html">All the Moves</a></li>
                 <li><a href="level-4/50-50.html">50/50</a></li>
             </ol>
+        </div>
   </body>
 </html>
