--- a/packages/proto/public/leaderboard.html
+++ b/packages/proto/public/leaderboard.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Put style and other stuff here -->
+    <link rel="stylesheet" href="/styles/tokens.css" />
+    <link rel="stylesheet" href="/styles/page.css" />
   </head>
   <body>
-    <h1>I like my cheese drippy bruh</h1>
+    <h1>Leaderboard</h1>
   </body>
 </html>
