--- a/packages/proto/public/level-1/answer-yoohoo.html
+++ b/packages/proto/public/level-1/answer-yoohoo.html
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="../styles/page.css" />
   </head>
   <body>
-    <h1>Obligatory Connections Puzzle</h1>
+    <h1>Just Look Up</h1>
   </body>
 </html>
