--- a/packages/proto/public/level-2/2-3-puzzle.html
+++ b/packages/proto/public/level-2/2-3-puzzle.html
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="../styles/page.css" />
   </head>
   <body>
-    <h1>Obligatory Connections Puzzle</h1>
+    <h1>2/3 Puzzle</h1>
   </body>
 </html>
