--- a/packages/proto/public/level-3/lele.html
+++ b/packages/proto/public/level-3/lele.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Put style and other stuff here -->
+    <link rel="stylesheet" href="../styles/tokens.css" />
+    <link rel="stylesheet" href="../styles/page.css" />
   </head>
   <body>
-    <h1>from the screen to the ring to the pen to the king</h1>
+    <h1>LELE!</h1>
   </body>
 </html>
