--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -2,41 +2,42 @@
 <html lang="en">
   <head>
     <!-- Style for whole document -->
-    <style>
-        body {
-            background-color: beige;
-            font-family:'Times New Roman', Times, serif;
-        }
-        .inner-box {
-            background-color: #d1bfa3;   
-            padding: 20px;          
-            margin: 20px auto;       
-            width: 90%;                
-        }
-        h1 {
-          color: navy;
-          padding: 10px;
-          text-align: center;
-          font-size: 50px;
-          border: 5px solid black;
-          margin: 0 auto;
-          width: 550px;
-          
-        }
-        h2, h2 a{
-            color: darkslategrey;
-            text-decoration: underline;
-        }
-        li a {
-            color: black;
-            font-style: italic;
-        }
-      </style>
+    <meta charset="utf-8" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/tokens.css" />
+    <link rel="stylesheet" href="/styles/page.css" />
   </head>
   <body>
     <div class="inner-box">
     <h2> <a href="leaderboard.html">Leaderboard </a></h2>
-    <h1>Funny Puzzle Hunt :P</h1>
+
+    <div class="homepagetitle" >
+        <h1>Funny Puzzle Hunt :P</h1>
+    </div>
+
+    <!-- Container for centering SVG files -->
+    <div style="width: 100%; max-width: 900px; margin: 0 auto; text-align: center;">
+        <svg class="icon">
+            <use href="/icons/puzzlepiece.svg#icon-piece" />
+        </svg>
+        <svg class="icon">
+            <use href="/icons/puzzlepiece.svg#icon-piece" />
+        </svg>
+        <svg class="icon">
+            <use href="/icons/puzzlepiece.svg#icon-thinking" />
+        </svg>
+        <svg class="icon">
+            <use href="/icons/puzzlepiece.svg#icon-piece" />
+        </svg>
+        <svg class="icon">
+            <use href="/icons/puzzlepiece.svg#icon-piece" />
+        </svg>
+    </div>
+
         <h2>Level 1 Puzzles</h2>
         <ol>
             <li><a href="level-1/colors.html">Colors</a></li>
