--- a/packages/proto/public/leaderboard.html
+++ b/packages/proto/public/leaderboard.html
@@ -5,7 +5,14 @@
     <link rel="stylesheet" href="/styles/page.css" />
   </head>
   <body>
+    <main class="page">
+      <div class="navbar">
+        <h2> <a href="leaderboard.html">Leaderboard </a></h2>
+        <h2><a href="story.html">Story</a></h2>
+    </div>
+
     <h1>Leaderboard</h1>
     <h2>This is an entry in leaderboard.</h2>
+  </main>
   </body>
 </html>
