--- a/packages/proto/public/level-2/not-without-precedent.html
+++ b/packages/proto/public/level-2/not-without-precedent.html
@@ -5,11 +5,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="/styles/reset.css" />
     <link rel="stylesheet" href="../styles/tokens.css" />
     <link rel="stylesheet" href="../styles/page.css" />
   </head>
   <body>
-    <h1>Not Without Precedent</h1>
+    <main class="page">
+      <div class="navbar">
+        <h2> <a href="solution.html">Solution </a></h2>
+        <h2> <a href="../index.html">Puzzle List</a></h2>
+        <h2> <a href="../leaderboard.html">Leaderboard </a></h2>
+        <h2><a href="../story.html">Story</a></h2>
+      </div>
+      <h1>Not Without Precedent</h1>
+      <h3> A puzzle will be here.</h3>
+    </main>
   </body>
 </html>
