--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -8,19 +8,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/reset.css" />
     <link rel="stylesheet" href="/styles/tokens.css" />
     <link rel="stylesheet" href="/styles/page.css" />
   </head>
   <body>
-    <div class="inner-box">
-    <h2> <a href="leaderboard.html">Leaderboard </a></h2>
+    <main class="page">
+        
+    <div class="navbar">
+        <h2> <a href="leaderboard.html">Leaderboard </a></h2>
+        <h2><a href="story.html">Story</a></h2>
+    </div>
+
+   <div class="inner-box">
+    <!-- Container for centering SVG files -->
 
     <div class="homepagetitle" >
         <h1>Funny Puzzle Hunt :P</h1>
     </div>
 
-    <!-- Container for centering SVG files -->
-    <div style="width: 100%; max-width: 900px; margin: 0 auto; text-align: center;">
+    <div class="icon-container">
         <svg class="icon">
             <use href="/icons/puzzlepiece.svg#icon-piece" />
         </svg>
@@ -38,38 +45,50 @@
         </svg>
     </div>
 
-        <h2>Level 1 Puzzles</h2>
-        <ol>
-            <li><a href="level-1/colors.html">Colors</a></li>
-            <li><a href="level-1/answer-yoohoo.html">Just Look Up</a></li>
-            <li><a href="level-1/aplusbequalsc.html">A+B=C</a></li>
-            <li><a href="level-1/time.html">Time</a></li>
-            <li><a href="level-1/1-3-puzzle.html">1/3 Puzzle</a></li>
-        </ol>
-        <h2>Level 2 Puzzles</h2>
-        <ol>
-            <li><a href= "level-2/not-without-precedent.html">Not Without Precedent</a></li>
-            <li><a href="level-2/lunchable-gatorade.html">Lunchables Gatorade</a></li>
-            <li><a href="level-2/nyc-subway.html">NYC Subway</a></li>
-            <li><a href="level-2/blank-squares.html">Blank Squares</a></li>
-            <li><a href="level-2/2-3-puzzle.html">2/3 Puzzle</a></li>
-        </ol>
-        <h2>Level 3 Puzzles</h3>
+
+    <div class="grid-container">
+        <div class="grid-item">
+            <h2>Level 1 Puzzles</h2>
             <ol>
-                <li><a href="level-3/lele.html">LELE!</a></li>
-                <li><a href="level-3/obligatory-connections-puzzle.html">Obligatory Connections Puzzle</a></li>
-                <li><a href="level-3/three-crosses.html">Three Crosses</a></li>
-                <li><a href="level-3/blank-spaces.html">Blank Spaces</a></li>
-                <li><a href="level-3/list-of-really-really-really-stupid-article-ideas.html">List of really, really, really stupid article ideas</a></li>
-            </ol>
-        <h2>Level 4 Puzzles</h4>
-            <ol>
-                <li><a href="level-4/the-puzzle-that-gives-back.html">The Puzzle That Gives Back</a></li>
-                <li><a href="level-4/path.html">Path</a></li>
-                <li><a href="level-4/generational-gifts.html">Generational Gifts</a></li>
-                <li><a href="level-4/all-the-moves.html">All the Moves</a></li>
-                <li><a href="level-4/50-50.html">50/50</a></li>
+                <li><a href="level-1/colors.html">Colors</a></li>
+                <li><a href="level-1/answer-yoohoo.html">Just Look Up</a></li>
+                <li><a href="level-1/aplusbequalsc.html">A+B=C</a></li>
+                <li><a href="level-1/time.html">Time</a></li>
+                <li><a href="level-1/1-3-puzzle.html">1/3 Puzzle</a></li>
             </ol>
         </div>
+        <div class="grid-item">
+            <h2>Level 2 Puzzles</h2>
+            <ol>
+                <li><a href= "level-2/not-without-precedent.html">Not Without Precedent</a></li>
+                <li><a href="level-2/lunchable-gatorade.html">Lunchables Gatorade</a></li>
+                <li><a href="level-2/nyc-subway.html">NYC Subway</a></li>
+                <li><a href="level-2/blank-squares.html">Blank Squares</a></li>
+                <li><a href="level-2/2-3-puzzle.html">2/3 Puzzle</a></li>
+            </ol>
+        </div>
+        <div class="grid-item">
+            <h2>Level 3 Puzzles</h3>
+                <ol>
+                    <li><a href="level-3/lele.html">LELE!</a></li>
+                    <li><a href="level-3/obligatory-connections-puzzle.html">Obligatory Connections Puzzle</a></li>
+                    <li><a href="level-3/three-crosses.html">Three Crosses</a></li>
+                    <li><a href="level-3/blank-spaces.html">Blank Spaces</a></li>
+                    <li><a href="level-3/list-of-really-really-really-stupid-article-ideas.html">List of really, really, really stupid article ideas</a></li>
+                </ol>
+        </div>
+        <div class="grid-item">
+            <h2>Level 4 Puzzles</h4>
+                <ol>
+                    <li><a href="level-4/the-puzzle-that-gives-back.html">The Puzzle That Gives Back</a></li>
+                    <li><a href="level-4/path.html">Path</a></li>
+                    <li><a href="level-4/generational-gifts.html">Generational Gifts</a></li>
+                    <li><a href="level-4/all-the-moves.html">All the Moves</a></li>
+                    <li><a href="level-4/50-50.html">50/50</a></li>
+                </ol>
+        </div>
+    </div>
+    </div>
+    </main>
   </body>
 </html>
