--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -22,21 +22,23 @@
     <script type="module">
         import { define } from "@calpoly/mustang";
         import { PuzzleList } from "/scripts/puzzlelist.js";
+        import { NavBarElement } from "/scripts/navbar.js";
 
         define ({
-            "puzzle-list": PuzzleList
+            "puzzle-list": PuzzleList,
+            "nav-bar": NavBarElement
         })
+
+        NavBarElement.initializeOnce();
+
     </script>
-
-
   </head>
   <body>
     <main class="page">
-        
-    <div class="navbar">
-        <h2> <a href="leaderboard.html">Leaderboard </a></h2>
-        <h2><a href="story.html">Story</a></h2>
-    </div>
+
+    <nav-bar></nav-bar>
+
+    <!-- <script src="/scripts/navbar.js"></script> --> 
 
    <div class="inner-box">
     <!-- Container for centering SVG files -->
