--- a/packages/proto/public/level-1/time.html
+++ b/packages/proto/public/level-1/time.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/reset.css" />
-    <link rel="stylesheet" href="../styles/tokens.css" />
-    <link rel="stylesheet" href="../styles/page.css" />
+    <!-- Style for whole document -->
+   <meta charset="utf-8" />
+
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="../styles/reset.css" />
+   <link rel="stylesheet" href="../styles/tokens.css" />
+   <link rel="stylesheet" href="../styles/page.css" />
+
+   <script type="importmap">
+       {
+           "imports":{
+               "@calpoly/mustang": "https://unpkg.com/@calpoly/mustang"
+           }
+       }
+   </script>
+   <script type="module">
+       import { define } from "@calpoly/mustang";
+       import { NavBarElement } from "/scripts/navbar.js";
+
+       define ({
+           "nav-bar": NavBarElement
+       })
+
+       NavBarElement.initializeOnce();
+
+   </script>
   </head>
   <body>
     <main class="page">
-      <div class="navbar">
-        <h2> <a href="solution.html">Solution </a></h2>
-        <h2> <a href="../index.html">Puzzle List</a></h2>
-        <h2> <a href="../leaderboard.html">Leaderboard </a></h2>
-        <h2><a href="../story.html">Story</a></h2>
-      </div>
+      <nav-bar></nav-bar>
       <h1>Time</h1>
       <h3> A puzzle will be here.</h3>
     </main>
