--- a/packages/proto/public/story.html
+++ b/packages/proto/public/story.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/reset.css" />
-    <link rel="stylesheet" href="/styles/tokens.css" />
-    <link rel="stylesheet" href="/styles/page.css" />
+   <!-- Style for whole document -->
+   <meta charset="utf-8" />
+
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="/styles/reset.css" />
+   <link rel="stylesheet" href="/styles/tokens.css" />
+   <link rel="stylesheet" href="/styles/page.css" />
+
+   <script type="importmap">
+       {
+           "imports":{
+               "@calpoly/mustang": "https://unpkg.com/@calpoly/mustang"
+           }
+       }
+   </script>
+   <script type="module">
+       import { define } from "@calpoly/mustang";
+       import { NavBarElement } from "/scripts/navbar.js";
+
+       define ({
+           "nav-bar": NavBarElement
+       })
+
+       NavBarElement.initializeOnce();
+
+   </script>
   </head>
   <body>
     <main class="page">
-        <div class="navbar">
-            <h2> <a href="leaderboard.html">Leaderboard </a></h2>
-            <h2> <a href="index.html">Puzzle List </a></h2>
-        </div>
-        <h1>Story</h1>
-        <h2>Hello</h2>
-        <h3>This is the story of what the puzzle hunt will be all about.</h3>
-    </main>
+      <nav-bar></nav-bar>
+
+    <h1>Story</h1>
+    <h2>Hello</h2>
+    <h3>This is where story will go.</h3>
+  </main>
   </body>
 </html>
