--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -36,7 +36,8 @@
   <body>
     <main class="page">
 
-    <nav-bar></nav-bar>
+    <nav-bar>
+    </nav-bar>
 
     <!-- <script src="/scripts/navbar.js"></script> --> 
 
