--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -69,19 +69,19 @@
         <div class="grid-container">
             <puzzle-list>
                 <span slot="level">Level 1 Puzzles</span>
-                <a slot="item-1" href="level-1/colors.html">Colors</a>
-                <a slot="item-2" href="level-1/answer-yoohoo.html">Just Look Up</a>
-                <a slot="item-3" href="level-1/aplusbequalsc.html">A+B=C</a>
-                <a slot="item-4" href="level-1/time.html">Time</a>
-                <a slot="item-5" href="level-1/1-3-puzzle.html">1/3 Puzzle</a>
+                <a slot="item-1" href="level-1/colors">Colors</a>
+                <a slot="item-2" href="level-1/answer-yoohoo">Just Look Up</a>
+                <a slot="item-3" href="level-1/aplusbequalsc">A+B=C</a>
+                <a slot="item-4" href="level-1/time">Time</a>
+                <a slot="item-5" href="level-1/1-3-puzzle">1/3 Puzzle</a>
         </puzzle-list>
         <puzzle-list>
                 <span slot="level">Level 2 Puzzles</span>
-                <a slot="item-1" href="level-2/not-without-precedent.html">Not Without Precedent</a>
-                <a slot="item-2" href="level-2/lunchable-gatorade.html">Lunchables Gatorade</a>
-                <a slot="item-3" href="level-2/nyc-subway.html">NYC Subway</a>
-                <a slot="item-4" href="level-2/blank-squares.html">Blank Squares</a>
-                <a slot="item-5" href="level-2/2-3-puzzle.html">2/3 Puzzle</a>
+                <a slot="item-1" href="level-2/not-without-precedent">Not Without Precedent</a>
+                <a slot="item-2" href="level-2/lunchable-gatorade">Lunchables Gatorade</a>
+                <a slot="item-3" href="level-2/nyc-subway">NYC Subway</a>
+                <a slot="item-4" href="level-2/blank-squares">Blank Squares</a>
+                <a slot="item-5" href="level-2/2-3-puzzle">2/3 Puzzle</a>
             </puzzle-list>
             <puzzle-list>
                 <span slot="level">Level 3 Puzzles</span>
