--- a/packages/proto/public/level-1/1-3-puzzle.html
+++ b/packages/proto/public/level-1/1-3-puzzle.html
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="../styles/reset.css" />
    <link rel="stylesheet" href="../styles/tokens.css" />
    <link rel="stylesheet" href="../styles/page.css" />
+   <link rel="stylesheet" href="../styles/puzzlepage.css" />
 
    <script type="importmap">
        {
@@ -33,9 +34,9 @@
   </head>
   <body>
     <main class="page">
-      <nav-bar></nav-bar>
+      <nav-bar src="/api/puzzles/1-3-puzzle"></nav-bar>
       <h1>1/3 Puzzle</h1>
-      <h3> A puzzle will be here.</h3>
+      <h2>Only 1/3 of a puzzle? This stinks!</h2>
     </main>
   </body>
 </html>
