--- a/packages/proto/public/level-1/aplusbequalsc.html
+++ b/packages/proto/public/level-1/aplusbequalsc.html
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="../styles/reset.css" />
    <link rel="stylesheet" href="../styles/tokens.css" />
    <link rel="stylesheet" href="../styles/page.css" />
+   <link rel="stylesheet" href="../styles/puzzlepage.css" />
 
    <script type="importmap">
        {
@@ -33,9 +34,9 @@
   </head>
   <body>
     <main class="page">
-      <nav-bar></nav-bar>
+      <nav-bar src="/api/puzzles/aplubequalsc"></nav-bar>
       <h1>A + B = C</h1>
-      <h3> A puzzle will be here.</h3>
+      <h3>_ _ _ D G _ R ...</h3>
     </main>
   </body>
 </html>
