--- a/packages/proto/public/level-2/2-3-puzzle.html
+++ b/packages/proto/public/level-2/2-3-puzzle.html
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="../styles/reset.css" />
    <link rel="stylesheet" href="../styles/tokens.css" />
    <link rel="stylesheet" href="../styles/page.css" />
+   <link rel="stylesheet" href="../styles/puzzlepage.css" />
 
    <script type="importmap">
        {
@@ -33,9 +34,14 @@
   </head>
   <body>
     <main class="page">
-      <nav-bar></nav-bar>
+      <nav-bar src="/api/puzzles/2-3-puzzle"></nav-bar>
       <h1>2/3 Puzzle</h1>
-      <h3> A puzzle will be here.</h3>
+      <h2>Only <s>1/3</s> 2/3 of a puzzle? This <s>stinks</s>! is so mid.</h2>
+      <h3>MIS ___ TEN <br>
+        LEG ___ ARY <br>
+        PRE ___ ERS <br>
+        REP ___ AGE</h3>
+      <img src="/images/2_3_puzzle.png">
     </main>
   </body>
 </html>
