--- a/packages/proto/public/level-2/lunchable-gatorade.html
+++ b/packages/proto/public/level-2/lunchable-gatorade.html
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="../styles/reset.css" />
    <link rel="stylesheet" href="../styles/tokens.css" />
    <link rel="stylesheet" href="../styles/page.css" />
+   <link rel="stylesheet" href="../styles/puzzlepage.css" />
 
    <script type="importmap">
        {
@@ -33,9 +34,10 @@
   </head>
   <body>
     <main class="page">
-      <nav-bar></nav-bar>
-      <h1>Lunchable Gatorade</h1>
-      <h3> A puzzle will be here.</h3>
+      <nav-bar src="/api/puzzles/lunchable-gatorade"></nav-bar>
+      <h1>Lunchables Gatorade</h1>
+      <h2>Life is great, I have my lunchables and gatorade while listening to Elon Musk Podcast</h2>
+      <h3>I'm in the thick of it</h3>
     </main>
   </body>
 </html>
