--- a/packages/proto/public/level-2/not-without-precedent.html
+++ b/packages/proto/public/level-2/not-without-precedent.html
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="../styles/reset.css" />
    <link rel="stylesheet" href="../styles/tokens.css" />
    <link rel="stylesheet" href="../styles/page.css" />
+   <link rel="stylesheet" href="../styles/puzzlepage.css" />
 
    <script type="importmap">
        {
@@ -33,9 +34,9 @@
   </head>
   <body>
     <main class="page">
-      <nav-bar></nav-bar>
-      <h1>Not Without Precdent</h1>
-      <h3> A puzzle will be here.</h3>
+      <nav-bar src="/api/puzzles/not-without-precedent"></nav-bar>
+      <h1>Not Without Precedent</h1>
+      <img src="/images/not_without_puzzle.png">
     </main>
   </body>
 </html>
