--- a/packages/proto/public/level-1/colors.html
+++ b/packages/proto/public/level-1/colors.html
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="../styles/reset.css" />
    <link rel="stylesheet" href="../styles/tokens.css" />
    <link rel="stylesheet" href="../styles/page.css" />
+   <link rel="stylesheet" href="../styles/puzzlepage.css" />
 
    <script type="importmap">
        {
@@ -33,9 +34,10 @@
   </head>
   <body>
     <main class="page">
-      <nav-bar></nav-bar>
+      <nav-bar src="/api/puzzles/colors"></nav-bar>
       <h1>Colors</h1>
-      <h3> A puzzle will be here.</h3>
+      <h2> Don't look too close, these colors will for sure hex you.</h2>
+      <img src="/images/colors_puzzle.png">
     </main>
   </body>
 </html>
