--- a/packages/proto/public/level-2/blank-squares.html
+++ b/packages/proto/public/level-2/blank-squares.html
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="../styles/reset.css" />
    <link rel="stylesheet" href="../styles/tokens.css" />
    <link rel="stylesheet" href="../styles/page.css" />
+   <link rel="stylesheet" href="../styles/puzzlepage.css" />
 
    <script type="importmap">
        {
@@ -33,9 +34,9 @@
   </head>
   <body>
     <main class="page">
-      <nav-bar></nav-bar>
+      <nav-bar src="/api/puzzles/blank-squares"></nav-bar>
       <h1>Blank Squares</h1>
-      <h3> A puzzle will be here.</h3>
+      <img src="/images/blank_squares_puzzle.png">
     </main>
   </body>
 </html>
