Final Touch ups

--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -81,7 +81,7 @@
                 <a slot="item-2" href="level-2/lunchable-gatorade">Lunchables Gatorade</a>
                 <a slot="item-3" href="level-2/nyc-subway">NYC Subway</a>
                 <a slot="item-4" href="level-2/blank-squares">Blank Squares</a>
-                <a slot="item-5" href="level-2/2-3-puzzle">2/3 Puzzle</a>
+                <a slot="item-5" href="level-2/2-3-puzzle.html">2/3 Puzzle</a>
             </puzzle-list>
             <puzzle-list>
                 <span slot="level">Level 3 Puzzles</span>
