--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -20,13 +20,14 @@
         }
     </script>
     <script type="module">
-        import { define } from "@calpoly/mustang";
+        import { define, Auth } from "@calpoly/mustang";
         import { PuzzleList } from "/scripts/puzzlelist.js";
         import { NavBarElement } from "/scripts/navbar.js";
 
         define ({
             "puzzle-list": PuzzleList,
-            "nav-bar": NavBarElement
+            "nav-bar": NavBarElement,
+            "mu-auth": Auth.Provider
         })
 
         NavBarElement.initializeOnce();
@@ -34,10 +35,10 @@
     </script>
   </head>
   <body>
+    <mu-auth provides ="puzzles:auth">
     <main class="page">
 
-    <nav-bar>
-    </nav-bar>
+        <nav-bar></nav-bar>
 
     <!-- <script src="/scripts/navbar.js"></script> --> 
 
@@ -101,5 +102,6 @@
             </puzzle-list>
         </div>
     </main>
+</mu-auth>
   </body>
 </html>
