new lab 14 fix up

--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -42,7 +42,7 @@
 
         <nav-bar></nav-bar>
 
-        <complex-profile-name src="/profile/ManiaMate" mode="view"></complex-profile-name>
+        <complex-profile-name mode="view"></complex-profile-name>
 
     <!-- <script src="/scripts/navbar.js"></script> --> 
 
